--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -2,7 +2,9 @@ This paper examines the impacts by gender of two closely related and influential
 
 ABC/CARE was conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. It was a pioneering program that focused on the early years of disadvantaged children. It is a template for many current and proposed early childhood programs.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: the Infant Health and Development Program (IHDP)---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control children were followed through their mid 30s, with data collected on multiple dimensions of human development with over 100 reported program outcomes.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Anderson_2008_JASA,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Heckman_2006_Science}, \citet{Anderson_2008_JASA} and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} note separate treatment effects by gender. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} only use health data, and find that men are more affected by ABC/CARE than women. \citet{Anderson_2008_JASA} constructs factors using data up to the age-21 collection and finds that women benefit more than men, but does not use the crime, health, and employment data used in our paper. }
 
-To avoid cherry-picking and reporting outcomes with ``significant'' treatment effects, we analyze aggregates of treatment effects by age and over all ages. We analyze different age-appropriate outcomes documented below. Table~\ref{table:summary} previews our analysis. Panel (a) displays our summaries for early-childhood outcomes (birth to age 5). We present four treatment-control comparisons across these outcomes by gender: (i) the average effect size of the outcomes within an age category; (ii) the percentage of outcomes for which there is a positive treatment effect; (iii) the percentage of outcomes for which there is a positive and statistically significant treatment effect;\footnote{We perform inference at the 10\% level throughout this paper due to our sample size. However, we also display the $p$-values below so that the reader can qualify the conclusions at different significance levels.} and (iv) the $p$-value resulting from an exact non-parametric test comparing distributions of outcomes \citep{Rosenbaum_2005_Distribution_JRSS}. Panel (a) reports outcomes for children (0-6). Panels (b) and (c) report school age (ages 6 to 18) and adulthood (21 to 35) outcomes, respectively, and Panel (d) includes outcomes over all ages.
+To avoid cherry-picking and reporting outcomes with ``significant'' treatment effects, we analyze aggregates of treatment effects. Table~\ref{table:summary} previews our analysis. Consider education for which we observe four outcomes (e.g., labor income at ages 21 and 30). In the control group, all of the outcomes are greater for males if compared to females. This fraction, which is denoted by $1.000$, is statistically significant at the $10\%$. We also provide an exact, non-parametric test in which the null hypothesis is that the joint distribution of these four outcomes is the same for males and females and find that the $p$-value is $0.117$. The analogous statistics for the treatment group yield a significant fraction of $0.75$ and a $p$-value of $0.080$. This indicates that treatment reduces the gaps between males and females. The treatment-control difference between the treatment male-female gap and control male-female gap is $0.25$. However, the post-treatment joint distribution of employment outcomes differs 
+
+Panel (a) displays our summaries for early-childhood outcomes (birth to age 5). We present four treatment-control comparisons across these outcomes by gender: (i) the average effect size of the outcomes within an age category; (ii) the percentage of outcomes for which there is a positive treatment effect; (iii) the percentage of outcomes for which there is a positive and statistically significant treatment effect;\footnote{We perform inference at the 10\% level throughout this paper due to our sample size. However, we also display the $p$-values below so that the reader can qualify the conclusions at different significance levels.} and (iv) the $p$-value resulting from an exact non-parametric test comparing distributions of outcomes \citep{Rosenbaum_2005_Distribution_JRSS}. Panel (a) reports outcomes for children (0-6). Panels (b) and (c) report school age (ages 6 to 18) and adulthood (21 to 35) outcomes, respectively, and Panel (d) includes outcomes over all ages.
 
 
 \begin{table}[!htpb]
