--- a/output/abccare-proportion-summary-full-rosenbaum.tex
+++ b/output/abccare-proportion-summary-full-rosenbaum.tex
@@ -1,16 +1,17 @@
 \begin{tabular}{l c c c c c c c}
-\toprule
-Category & \# Outcomes & \mc{2}{c}{Control} & \mc{2}{c}{Treatment} & Treatment - Control & Female vs. Male  \\
+\toprule 
+\multicolumn{1}{c}{$[1]$} & \multicolumn{1}{c}{$[2]$} & \multicolumn{1}{c}{$[3]$} & \multicolumn{1}{c}{$[4]$} & \multicolumn{1}{c}{$[5]$} & \multicolumn{1}{c}{$[6]$} & \multicolumn{1}{c}{$[7]$} & \multicolumn{1}{c}{$[8]$} \\
+Category & \# Outcomes & \mc{2}{c}{Control} & \mc{2}{c}{Treatment} & Treatment - Control & Overall  \\
 \cmidrule(lr){3-4} \cmidrule(lr){5-6} \cmidrule(lr){7-7}   \cmidrule(lr){8-8} 
-            &                       & Proportion  & Rosenbaum & Proportion & Rosenbaum &  Proportion & Rosenbaum \\
-            &                       &   & $p$-value &  & $p$-value &  & $p$-value \\
+            &                       & Proportion  & Male $=$ Female & Proportion  & Male $=$ Female & [5] - [3]  & Male $=$ Female  \\
+            &                       & Male $>$ Female   & $p$-value & Male $>$ Female & $p$-value &  & $p$-value \\
 \midrule
 IQ & 15 & 0.733 &  0.230 & 0.533 & 0.228 & -0.200 & \textbf{0.000} \\
 Achievement & 12 & \textbf{0.833} &  \textbf{0.065} & \textbf{0.000} & 0.341 & \textbf{-0.833} & 0.303 \\
-Social-Emotional & 22 & 0.455 & 0.191 & 0.364 & 0.599 & \textbf{-0.091}  & 0.165 \\
+Socio-Emotional & 22 & 0.455 & 0.191 & 0.364 & 0.599 & \textbf{-0.091}  & 0.165 \\
 
 Parenting & 7 & 0.571 & 0.977  & 0.286 & 0.142 &  \textbf{-0.286}  &  0.477 \\
-Parental Labor Income & 15 & 0.600 & \textbf{0.000} & 0.733 & \textbf{0.000}  & 0.133  & \textbf{0.000} \\
+Parental Income & 15 & 0.600 & \textbf{0.000} & 0.733 & \textbf{0.000}  & 0.133  & \textbf{0.000} \\
 
 Education & 9 & 0.667 & 0.191  & \textbf{0.111} & 0.142 & \textbf{-0.556}  & \textbf{0.076} \\
 
